2008-03-09 Borut Razem <borut.razem AT siol.net>

	* .version, sdcc.spec, doc/sdccman.lyx, doc/INSTALL.txt:
	  changed sdcc version to 2.8.0
	*  knownbugs.html: regenerated

2008-03-09 Raphael Neider <rneider AT web.de>

	* src/pic16/gen.c (pic16_mov2w_volatile): NEW, read volatile operands,
	  (genOr): read volatile operand even if the result is known,
	  closes #1511838
	  (genOr,genXor): removed unused legacy code,
	  (genDummyRead): use pic16_mov2w_volatile()

2008-03-08 Borut Razem <borut.razem AT siol.net>

	* src/SDCCglue.c: fixed bug #1864582: multiple definition of char
	  cons w. --model-large
	* support/regression/staticinit.c: added regression test for bug
	  #1864582

2008-03-08 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/gen.c (pushSide, genPcall),
	* src/hc08/gen.c (pushSide, genPcall): synchronized with mcs51
	* src/mcs51/gen.c: cosmetic changes
	* support/regression/fwk/include/testfwk.h: added macro reentrant
	* support/regression/tests/bug1908493.c: new, added

2008-03-08 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* src/SDCCdebug.c:, as/link/lkaomf51.c: Fixed bug 1909409: Pdata in OMF file

2008-03-08 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (pushSide, genPcall): fixed bug 1908493
	* src/SDCCmain.c (preProcess): removed -DSDCC_PARMS_IN_BANK1 because it is
	  already set in ds390/main.c and mcs51/main.c

2008-03-07 Raphael Neider <rneider AT web.de>

	* src/regression/init0.c: new test for initialized arrays of function
	  pointers
	* src/regression/Makefile: made a bit more flexible, added init0.c
	* src/pic/glue.c (emitIvals): hacky fix for initializing from function
	  pointers, closes #1427663

2008-03-05 Borut Razem <borut.razem AT siol.net>

	* dos/sdccman.lyx: docummented predefined macros SDCC_REVISION,
	  SDCC_PARMS_IN_BANK1, SDCC_FLOAT_REENT and SDCC_INT_LONG_REENT

2008-03-05 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* support/librarian/sdcclib.c:Added feature request 1908061: